# NumCompute

./: CMakeLists.txt  NumCompute.cpp  NumCompute.h
Core/: CMakeLists.txt  Function.h  Variable.cpp  Variable.h
Differential/: CMakeLists.txt  Differential  Differential.cpp  Differential.h  OptDifferentiator.cpp  OptDifferentiator.h
Optimizer/: Adam.h  AdamW.h  BaseOptimizer.cpp  BaseOptimizer.h  CMakeLists.txt  Optimizer  RAdam.h  SGD.h  Status.cpp  Status.h
Samples/: CMakeLists.txt
Samples/Fourier/: CMakeLists.txt  main.cpp
